--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         </ul>
 
         <ul>
-            <li><b> Doctalk</b></li>
+            <li><b> Physicians</b></li>
             <li>Articles</li>
             <li>News</li>
             <li>News</li>
