--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         
 
             <div class="log">
-                <button type="button">Log In</button>
+                <button type="button" class="btn">Log In</button>
             </div>
         </nav>
     </header>
